[gd_scene load_steps=17 format=3 uid="uid://b5xjtp4qjtafs"]

[ext_resource type="Script" uid="uid://b312u7am18rvv" path="res://player/player.gd" id="1_gksjs"]
[ext_resource type="PackedScene" uid="uid://1krap1lcosn6" path="res://player/pause_menu.tscn" id="2_7lsas"]
[ext_resource type="Script" uid="uid://cynrqjjhf2g2w" path="res://player/interactray.gd" id="2_a7d5u"]
[ext_resource type="PackedScene" uid="uid://dpif4niheytqv" path="res://HorbarSlot.tscn" id="4_5q3xr"]
[ext_resource type="Texture2D" uid="uid://ham4xunaagqj" path="res://GUI/progress_bar_under.png" id="6_j5tpf"]
[ext_resource type="Texture2D" uid="uid://cyhmhqgh34gqo" path="res://GUI/progress_bar_progress.png" id="7_krbu7"]
[ext_resource type="PackedScene" uid="uid://dla100bo48c74" path="res://Robot/RobotAnimated.fbx" id="8_rgyib"]
[ext_resource type="PackedScene" uid="uid://ca88bcny88bnh" path="res://Inventory.tscn" id="15_wodsf"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pvv27"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hg6s5"]
animation = &"Robot_Armature|Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8t03j"]
animation = &"Robot_Armature|Walking Backwards"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2ieo8"]
animation = &"Robot_Armature|Jog Backward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ebec5"]
animation = &"Robot_Armature|Walking"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yllr7"]
animation = &"Robot_Armature|Jog Forward"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_kb6p2"]
blend_point_0/node = SubResource("AnimationNodeAnimation_hg6s5")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_8t03j")
blend_point_1/pos = -3.0
blend_point_2/node = SubResource("AnimationNodeAnimation_2ieo8")
blend_point_2/pos = -5.0
blend_point_3/node = SubResource("AnimationNodeAnimation_ebec5")
blend_point_3/pos = 3.0
blend_point_4/node = SubResource("AnimationNodeAnimation_yllr7")
blend_point_4/pos = 5.0
min_space = -5.0
max_space = 5.0

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_wodsf"]
nodes/WalkSpeed/node = SubResource("AnimationNodeBlendSpace1D_kb6p2")
nodes/WalkSpeed/position = Vector2(160, 100)
nodes/output/position = Vector2(540, 140)
node_connections = [&"output", 0, &"WalkSpeed"]

[node name="player" type="CharacterBody3D" groups=["player"]]
collision_layer = 4
script = ExtResource("1_gksjs")

[node name="pausemenu" parent="." instance=ExtResource("2_7lsas")]
visible = false

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="ItemHand" type="Node3D" parent="Head"]

[node name="Hand" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="RayCast3D" type="RayCast3D" parent="Head"]
target_position = Vector3(0, 0, -2.5)
collision_mask = 3
script = ExtResource("2_a7d5u")

[node name="PromptLabel" type="Label" parent="Head/RayCast3D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
vertical_alignment = 1

[node name="DownRay" type="RayCast3D" parent="Head/RayCast3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5)
target_position = Vector3(0, -100, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.467765, -0.046093)
cull_mask = 1048571
fov = 37.8493

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_pvv27")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="hud" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="RichTextLabel" type="RichTextLabel" parent="hud"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 8

[node name="Hotbar" type="MarginContainer" parent="hud"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="hud/Hotbar"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Slot1" parent="hud/Hotbar/HBoxContainer" instance=ExtResource("4_5q3xr")]
layout_mode = 2
stretch_mode = 3

[node name="Slot2" parent="hud/Hotbar/HBoxContainer" instance=ExtResource("4_5q3xr")]
layout_mode = 2
stretch_mode = 3

[node name="Slot3" parent="hud/Hotbar/HBoxContainer" instance=ExtResource("4_5q3xr")]
layout_mode = 2
stretch_mode = 3

[node name="Slot4" parent="hud/Hotbar/HBoxContainer" instance=ExtResource("4_5q3xr")]
layout_mode = 2
stretch_mode = 3

[node name="TextureProgressBar" type="TextureProgressBar" parent="hud"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
step = 0.0
value = 5.0
fill_mode = 4
texture_under = ExtResource("6_j5tpf")
texture_progress = ExtResource("7_krbu7")

[node name="Inventory" parent="hud" instance=ExtResource("15_wodsf")]

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_energy = 0.2
omni_range = 2.0

[node name="MeshAndAnimation" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -1, 0)

[node name="AnimationTree" type="AnimationTree" parent="MeshAndAnimation"]
root_node = NodePath("../RobotAnimated")
tree_root = SubResource("AnimationNodeBlendTree_wodsf")
anim_player = NodePath("../RobotAnimated/AnimationPlayer")
parameters/WalkSpeed/blend_position = 0.045

[node name="RobotAnimated" parent="MeshAndAnimation" instance=ExtResource("8_rgyib")]

[node name="Skeleton3D" parent="MeshAndAnimation/RobotAnimated/Robot_Armature" index="0"]
bones/0/position = Vector3(-0.00437802, 0.0325067, 0.939849)
bones/0/rotation = Quaternion(-0.471069, 0.511678, 0.498864, -0.517121)
bones/1/position = Vector3(0, 0.196175, -2.96589e-15)
bones/1/rotation = Quaternion(0.00624398, -0.0198476, -0.0182926, 0.999616)
bones/1/scale = Vector3(1, 1, 1)
bones/2/position = Vector3(0, 0.159802, 5.57529e-15)
bones/2/rotation = Quaternion(0.00964797, -0.0387577, -0.0634822, 0.997184)
bones/2/scale = Vector3(1, 1, 1)
bones/3/position = Vector3(1.46023e-08, 0.447026, -1.58516e-15)
bones/3/rotation = Quaternion(0.0227488, 0.023824, -0.0342673, 0.99887)
bones/3/scale = Vector3(1, 1, 1)
bones/4/position = Vector3(-7.36252e-10, 0.126487, 7.7766e-17)
bones/4/rotation = Quaternion(-7.61467e-16, 1.41472e-14, 2.91038e-09, 1)
bones/4/scale = Vector3(1, 1, 1)
bones/6/position = Vector3(0.0108521, 0.373424, -0.0435627)
bones/6/rotation = Quaternion(-0.773826, -0.0363526, 0.0677793, 0.628711)
bones/6/scale = Vector3(1, 1, 1)
bones/7/position = Vector3(-5.3547e-09, 0.141227, 1.87835e-07)
bones/7/rotation = Quaternion(-0.47188, 0.293997, -0.139117, 0.819476)
bones/7/scale = Vector3(1, 1, 1)
bones/8/position = Vector3(-5.50724e-08, 0.301004, 3.43781e-09)
bones/8/rotation = Quaternion(0.037465, -0.0261751, -0.283764, 0.957804)
bones/8/scale = Vector3(1, 1, 1)
bones/9/position = Vector3(1.66032e-07, 0.29694, -6.27283e-09)
bones/9/rotation = Quaternion(-0.108188, -0.0333174, 0.0801453, 0.990334)
bones/9/scale = Vector3(1, 1, 1)
bones/10/position = Vector3(0.0271031, 0.105165, 0.00179997)
bones/10/rotation = Quaternion(-0.165733, 0.0472817, -0.0160199, 0.984906)
bones/10/scale = Vector3(1, 1, 1)
bones/11/position = Vector3(-7.53244e-08, 0.0265185, -1.73711e-07)
bones/11/rotation = Quaternion(-0.355874, -0.000860664, -0.0052158, 0.934519)
bones/11/scale = Vector3(1, 1, 1)
bones/12/position = Vector3(4.15771e-08, 0.0265185, 7.48606e-08)
bones/12/rotation = Quaternion(-0.0796495, 0.0165653, -0.00820113, 0.996652)
bones/12/scale = Vector3(1, 1, 1)
bones/13/position = Vector3(-6.43621e-08, 0.0226645, -4.92455e-08)
bones/13/rotation = Quaternion(5.84426e-07, -3.06871e-07, 8.39451e-07, 1)
bones/13/scale = Vector3(1, 1, 1)
bones/15/position = Vector3(-0.00320654, 0.109611, 0.00294776)
bones/15/rotation = Quaternion(-0.248098, 0.00693969, 0.0277205, 0.968313)
bones/15/scale = Vector3(1, 1, 1)
bones/16/position = Vector3(-4.21181e-08, 0.028652, 3.53131e-08)
bones/16/rotation = Quaternion(-0.256749, -0.000748687, 0.0170473, 0.966328)
bones/16/scale = Vector3(1, 1, 1)
bones/17/position = Vector3(5.99291e-10, 0.0286522, 1.02425e-07)
bones/17/rotation = Quaternion(-0.0397012, 0.0131402, 0.00439532, 0.999116)
bones/17/scale = Vector3(1, 1, 1)
bones/18/position = Vector3(-1.3967e-08, 0.024488, -1.53187e-07)
bones/18/rotation = Quaternion(-1.56241e-06, -1.04426e-06, 1.2145e-06, 1)
bones/18/scale = Vector3(1, 1, 1)
bones/20/position = Vector3(-0.0321073, 0.0979765, 0.000721844)
bones/20/rotation = Quaternion(-0.361557, -0.102024, 0.0955669, 0.921811)
bones/20/scale = Vector3(1, 1, 1)
bones/21/position = Vector3(-2.30168e-07, 0.0266189, -1.31451e-07)
bones/21/rotation = Quaternion(-0.17334, 0.00616239, 0.0173077, 0.984691)
bones/21/scale = Vector3(1, 1, 1)
bones/22/position = Vector3(2.93865e-08, 0.0266186, -3.8827e-08)
bones/22/rotation = Quaternion(0.0671657, 0.0215466, -0.0178419, 0.99735)
bones/22/scale = Vector3(1, 1, 1)
bones/23/position = Vector3(3.35319e-08, 0.0227498, 7.70294e-08)
bones/23/rotation = Quaternion(-3.63676e-06, -7.62145e-07, 9.79344e-07, 1)
bones/23/scale = Vector3(1, 1, 1)
bones/25/position = Vector3(0.036991, 0.0421209, 0.000839626)
bones/25/rotation = Quaternion(-0.0973033, 0.265668, -0.160515, 0.945615)
bones/25/scale = Vector3(1, 1, 1)
bones/26/position = Vector3(-2.08808e-07, 0.0265184, 2.75968e-09)
bones/26/rotation = Quaternion(-0.070435, -0.000447228, 0.111213, 0.991297)
bones/26/scale = Vector3(1, 1, 1)
bones/27/position = Vector3(5.49334e-08, 0.0265184, -5.45149e-08)
bones/27/rotation = Quaternion(0.0547601, 0.0273786, 0.0396161, 0.997338)
bones/27/scale = Vector3(1, 1, 1)
bones/28/position = Vector3(-4.47302e-09, 0.0226645, -6.04756e-09)
bones/28/rotation = Quaternion(-3.78694e-07, 1.84353e-06, -3.11106e-06, 1)
bones/28/scale = Vector3(1, 1, 1)
bones/30/position = Vector3(0.0108521, 0.373424, 0.0435627)
bones/30/rotation = Quaternion(0.0104706, 0.618816, 0.78062, -0.0871219)
bones/30/scale = Vector3(1, 1, 1)
bones/31/position = Vector3(-1.57297e-08, 0.141227, 1.67395e-07)
bones/31/rotation = Quaternion(-0.462849, -0.246209, 0.116253, 0.843586)
bones/31/scale = Vector3(1, 1, 1)
bones/32/position = Vector3(-8.78531e-08, 0.301004, -2.13704e-07)
bones/32/rotation = Quaternion(0.0378367, 0.025304, 0.282254, 0.958259)
bones/32/scale = Vector3(1, 1, 1)
bones/33/position = Vector3(8.64523e-08, 0.29694, 3.10257e-07)
bones/33/rotation = Quaternion(-0.0141959, 0.0801409, -0.101473, 0.991504)
bones/33/scale = Vector3(1, 1, 1)
bones/34/position = Vector3(-0.0271028, 0.105165, 0.00179968)
bones/34/rotation = Quaternion(-0.0935948, -0.0553806, -0.0308992, 0.993589)
bones/34/scale = Vector3(1, 1, 1)
bones/35/position = Vector3(-5.14359e-08, 0.0265183, 1.4182e-07)
bones/35/rotation = Quaternion(-0.344906, 0.000878293, 0.00415449, 0.938628)
bones/35/scale = Vector3(1, 1, 1)
bones/36/position = Vector3(-1.52763e-09, 0.0265186, -3.31454e-08)
bones/36/rotation = Quaternion(-0.0290504, -0.0168861, 0.00676961, 0.999412)
bones/36/scale = Vector3(1, 1, 1)
bones/37/position = Vector3(-4.76013e-08, 0.0226643, -2.34166e-08)
bones/37/rotation = Quaternion(-2.40893e-06, -2.11123e-06, -3.33616e-07, 1)
bones/37/scale = Vector3(1, 1, 1)
bones/39/position = Vector3(0.00320681, 0.109611, 0.0029474)
bones/39/rotation = Quaternion(-0.175402, -0.00726788, -0.0176252, 0.984312)
bones/39/scale = Vector3(1, 1, 1)
bones/40/position = Vector3(-4.21674e-08, 0.0286518, 1.9721e-09)
bones/40/rotation = Quaternion(-0.290419, 0.00100012, -0.0210595, 0.956667)
bones/40/scale = Vector3(1, 1, 1)
bones/41/position = Vector3(-2.97217e-08, 0.0286518, 3.8376e-08)
bones/41/rotation = Quaternion(0.00221683, -0.000366299, -0.0029947, 0.999993)
bones/41/scale = Vector3(1, 1, 1)
bones/42/position = Vector3(-3.39186e-08, 0.0244876, 1.6928e-08)
bones/42/rotation = Quaternion(2.21036e-06, 1.75943e-06, 3.5598e-07, 1)
bones/42/scale = Vector3(1, 1, 1)
bones/44/position = Vector3(0.0321076, 0.0979769, 0.000721455)
bones/44/rotation = Quaternion(-0.330126, 0.125835, -0.0176772, 0.935345)
bones/44/scale = Vector3(1, 1, 1)
bones/45/position = Vector3(-3.01238e-08, 0.0266185, 6.06459e-08)
bones/45/rotation = Quaternion(-0.166111, -0.000220175, -0.0509886, 0.984788)
bones/45/scale = Vector3(1, 1, 1)
bones/46/position = Vector3(-3.16316e-08, 0.0266188, -5.42386e-09)
bones/46/rotation = Quaternion(0.0597058, -0.0215617, 0.0156243, 0.997861)
bones/46/scale = Vector3(1, 1, 1)
bones/47/position = Vector3(3.41468e-08, 0.02275, 2.76297e-08)
bones/47/rotation = Quaternion(-3.81846e-06, -3.70447e-07, 1.76827e-07, 1)
bones/47/scale = Vector3(1, 1, 1)
bones/49/position = Vector3(-0.0369906, 0.0421215, 0.000839315)
bones/49/rotation = Quaternion(-0.10188, -0.290299, 0.163543, 0.937337)
bones/49/scale = Vector3(1, 1, 1)
bones/50/position = Vector3(-1.03126e-07, 0.0265185, 1.0136e-07)
bones/50/rotation = Quaternion(-0.0812699, -0.0476422, -0.0917969, 0.991312)
bones/50/scale = Vector3(1, 1, 1)
bones/51/position = Vector3(5.47224e-08, 0.0265185, -5.28504e-08)
bones/51/rotation = Quaternion(0.051427, -0.0279266, -0.0496425, 0.997051)
bones/51/scale = Vector3(1, 1, 1)
bones/52/position = Vector3(1.08201e-07, 0.0226644, -3.91806e-09)
bones/52/rotation = Quaternion(2.88003e-06, 2.81954e-09, -3.05808e-06, 1)
bones/52/scale = Vector3(1, 1, 1)
bones/54/position = Vector3(0.0480274, 0.091194, -0.132883)
bones/54/rotation = Quaternion(-0.66711, -0.121957, 0.733519, -0.0451623)
bones/54/scale = Vector3(0.999991, 1, 1)
bones/55/position = Vector3(-3.18825e-08, 0.554255, 4.39819e-08)
bones/55/rotation = Quaternion(0.30984, 0.550842, 0.23491, 0.738505)
bones/55/scale = Vector3(1, 1, 1)
bones/56/position = Vector3(1.73451e-08, 0.460364, 2.16724e-08)
bones/56/rotation = Quaternion(0.414639, 0.493745, -0.527694, 0.553019)
bones/56/scale = Vector3(1, 1, 1)
bones/57/position = Vector3(8.77657e-08, 0.100961, 1.62551e-06)
bones/57/rotation = Quaternion(0.274432, -0.000414907, -0.0194336, 0.96141)
bones/57/scale = Vector3(1, 1, 1)
bones/58/position = Vector3(9.617e-09, 0.0999365, 3.51591e-09)
bones/58/rotation = Quaternion(-6.53078e-09, 1.28072e-09, -1.19688e-09, 1)
bones/58/scale = Vector3(1, 1, 1)
bones/60/position = Vector3(0.0480274, 0.091194, 0.132883)
bones/60/rotation = Quaternion(0.755575, 0.0602752, -0.642514, 0.112471)
bones/60/scale = Vector3(0.999995, 1, 1)
bones/61/position = Vector3(1.17421e-08, 0.554255, 4.26827e-08)
bones/61/rotation = Quaternion(0.283673, -0.590473, -0.225369, 0.721166)
bones/61/scale = Vector3(1, 1, 1)
bones/62/position = Vector3(-1.32481e-07, 0.460364, -4.19606e-08)
bones/62/rotation = Quaternion(0.400046, -0.537488, 0.522612, 0.527206)
bones/62/scale = Vector3(1, 1, 1)
bones/63/position = Vector3(6.03491e-08, 0.100961, -3.37462e-06)
bones/63/rotation = Quaternion(0.273162, 0.00011761, 0.0193368, 0.961774)
bones/63/scale = Vector3(1, 1, 1)
bones/64/position = Vector3(-9.12892e-09, 0.0999366, -1.99711e-09)
bones/64/rotation = Quaternion(5.1904e-08, 3.86725e-10, -8.66427e-10, 1)
bones/64/scale = Vector3(1, 1, 1)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="MeshAndAnimation/RobotAnimated"]
